# JAVA

./: .gitignore  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
app/: db.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: agencies.py  branding.py  clients.py  context.py  domains.py  invitations.py  users.py
app/services/: acme.py  dns.py  utils.py
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src/__tests__/: BrandingConfigurator.test.tsx  ClientManagementDashboard.test.tsx  WorkspaceSwitching.test.tsx
src/components/: AggregatedMetrics.css  AggregatedMetrics.tsx  BrandingConfigurator.tsx  ClientManagementDashboard.css  ClientManagementDashboard.tsx  CustomDomainManager.css  CustomDomainManager.tsx  InviteClientForm.css  InviteClientForm.tsx  RoleBadge.css  RoleBadge.tsx  ThemePreview.css  ThemePreview.tsx  WorkspaceMetrics.css  WorkspaceMetrics.tsx  WorkspaceSwitcher.css  WorkspaceSwitcher.tsx
src/context/: AgencyContext.tsx
src/hooks/: useAgency.ts
src/pages/: BrandingPage.css  BrandingPage.tsx  ClientsPage.css  ClientsPage.tsx  MetricsPage.css  MetricsPage.tsx
src/styles/: panel.css
tests/: test_agency_backend.py
